<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pursnanikapil.myapplayout.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <Button
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:id="@+id/button"
                android:background="#ff494992"
                android:textColor="#ffffffff"
                android:typeface="sans"
                android:textSize="25sp"
                android:onClick="buttonclick"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:id="@+id/button2"
                android:background="#ff494992"
                android:textSize="25sp"
                android:typeface="sans"
                android:textColor="#ffffff"
                android:onClick="sidepanelayout"
                android:layout_marginTop="25dp"
                android:textStyle="bold"

               />

            </RelativeLayout>


            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="No account yet? Create one"
                android:gravity="center"
                android:textSize="16dip"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
