<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff95cbce">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user"
        android:id="@+id/textView2"
        android:textSize="25sp"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:singleLine="true"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textStyle="normal|bold|italic" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:src="@drawable/costruzione_piscine_padova"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Sign-In"
        android:id="@+id/textView4"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/signin"
        android:id="@+id/button"
        android:layout_marginTop="89dp"
        android:background="#ff494992"
        android:textColor="#ffffffff"
        android:typeface="sans"
        android:textSize="25dp"
        android:onClick="buttonclick"
        android:layout_below="@+id/textView3"
        android:layout_toStartOf="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2" />

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/seller"
        android:id="@+id/button2"
        android:background="#ff494992"
        android:textSize="25dp"
        android:typeface="sans"
        android:textColor="#ffffff"
        android:onClick="sidepanelayout"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

</RelativeLayout>
